--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_native_splash: ^2.4.0
   table_calendar: ^3.1.1
   intl: ^0.19.0
+  http: ^0.13.3
+
 
 
   # The following adds the Cupertino Icons fonts to your application.
