--- a/server/build.gradle
+++ b/server/build.gradle
@@ -16,6 +16,12 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok'
+    implementation 'mysql:mysql-connector-java:8.0.32'
+    // implementation 'org.springframework.security:spring-security-config:5.5.0' // 사용하는 Spring Security 버전에 맞게 버전을 지정해야 합니다
+    // implementation 'javax.servlet:javax.servlet-api:4.0.1' // 사용하는 Servlet API 버전에 맞게 버전을 지정해야 합니다
+
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -23,6 +29,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
+
+
+
 
 tasks.named('test') {
     useJUnitPlatform()
