--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^0.13.3
   async: ^2.11.0
   convert: ^3.1.1
+  flutter_staggered_grid_view: ^0.7.0
 
 
 
@@ -69,6 +70,8 @@ flutter:
   assets:
   - assets/logo/
   - assets/icons/
+  - assets/hearts/
+  - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
