--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   async: ^2.11.0
   convert: ^3.1.1
   flutter_staggered_grid_view: ^0.7.0
-
+  provider: ^5.0.0
+  dio: ^5.4.3+1
 
 
   # The following adds the Cupertino Icons fonts to your application.
