--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,9 +4,10 @@ SPRING_DATASOURCE_URL = jdbc:mysql://localhost:3306/mindlog
 SPRING_DATASOURCE_PASSWORD = mindlog
 
 # ?? ?? ?? (DEBUG, INFO, WARN, ERROR)
-logging.level.com.mindbridge.server.service.AppointmentService=DEBUG
+#logging.level.com.mindbridge.server.service.AppointmentService=DEBUG
+#logging.config=classpath:logback-dev.xml
 
-# server.address= 172.20.10.12
-# server.port = 3333
+#server.address=122.46.239.34
+server.port = 3333
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
