--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,15 @@ dependencies:
   async: ^2.11.0
   convert: ^3.1.1
   flutter_staggered_grid_view: ^0.7.0
-  provider: ^5.0.0
+  provider: ^6.1.2
   dio: ^5.4.3+1
-
-
   # The following adds the Cupertino Icons fonts to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  record: ^5.0.5
+  audioplayers: ^6.0.0
+  path: ^1.9.0
+  path_provider: ^2.0.3
 
 dev_dependencies:
   flutter_test:
