--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+        <key>NSDocumentsFolderUsageDescription</key>
+        <string>We need access to your documents folder to save recordings.</string>
         <key>NSMicrophoneUsageDescription</key>
         <string>This app requires microphone access to record audio.</string>
 		<key>CFBundleDevelopmentRegion</key>
