statistic_screen layout

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   audioplayers: ^6.0.0
   path: ^1.9.0
   path_provider: ^2.0.3
+  widget_arrows: ^0.6.0
 
 dev_dependencies:
   flutter_test:
