--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   widget_arrows: ^0.6.0
   timelines: ^0.1.0
   fl_chart: ^0.68.0
+  flutter_time_picker_spinner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
